--- a/Brick Destroy Javadoc/BrickDestroy/JavaFX_SceneController/JavaFXHomeMenuController.html
+++ b/Brick Destroy Javadoc/BrickDestroy/JavaFX_SceneController/JavaFXHomeMenuController.html
@@ -72,7 +72,7 @@ loadScripts(document, 'script');</script>
 <h1 title="Class JavaFXHomeMenuController" class="title">Class JavaFXHomeMenuController</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
-<div class="inheritance">BrickDestroy.JavaFX_SceneController.JavaFXHomeMenuController</div>
+<div class="inheritance">BrickDestroy.JavaFX_SceneController.HomeMenuController</div>
 </div>
 <section class="class-description" id="class-description">
 <hr>
